--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "clarifai": "^2.9.1",
+    "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.3",
+    "react-tilt": "^0.1.4",
+    "tachyons": "^4.12.0",
+    "tilt.js": "^1.2.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
