--- a/package.json
+++ b/package.json
@@ -1,34 +1,26 @@
+
+
+
+
 {
   "name": "facerecognitionbrain",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
     "clarifai": "^2.9.1",
-    "cors": "^2.8.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-particles-js": "^3.4.1",
-    "react-scripts": "4.0.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-particles-js": "^3.3.0",
+    "react-scripts": "^4.0.1",
     "react-tilt": "^0.1.4",
-    "tachyons": "^4.12.0",
-    "tilt.js": "^1.2.1",
-    "web-vitals": "^1.1.1"
+    "serve": "^11.3.2",
+    "tachyons": "^4.12.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build      ",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
