--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-tilt": "^0.1.4",
     "tachyons": "^4.12.0",
     "tilt.js": "^1.2.1",
+    "tsparticles": "^1.30.3",
     "web-vitals": "^1.1.1"
   },
   "engines": {
