--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-particles-js": "^3.3.0",
     "react-scripts": "^3.1.2",
     "react-tilt": "^0.1.4",
-    "tachyons": "^4.12.0"
+    "tachyons": "^4.12.0",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
