--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "^3.1.2",
     "react-tilt": "^0.1.4",
     "tachyons": "^4.12.0",
+    "tsparticles": "^1.30.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
