--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "private": true,
   "dependencies": {
     "clarifai": "^2.9.1",
+    "crypto-js": "^4.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.3.0",
     "react-scripts": "^3.1.2",
     "react-tilt": "^0.1.4",
+    "redis": "^3.1.2",
     "tachyons": "^4.12.0",
     "tsparticles": "^1.30.3",
     "web-vitals": "^2.1.0"
   },
   "engines": {
-"node": "14.16.1"
-},
+    "node": "14.16.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
