--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "clarifai": "^2.9.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express-session": "^1.17.2",
     "jquery": "^3.6.0",
