--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.7",
     "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
