--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://media.istockphoto.com/vectors/brain-concept-isolated-line-vector-illustration-editable-icon-vector-id854297668?b=1&k=20&m=854297668&s=170667a&w=0&h=gzlX-sY8WcVoLjjtRscOOloer58tOaRLTmotyjWC_H0=",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "https://media.istockphoto.com/vectors/brain-concept-isolated-line-vector-illustration-editable-icon-vector-id854297668?b=1&k=20&m=854297668&s=170667a&w=0&h=gzlX-sY8WcVoLjjtRscOOloer58tOaRLTmotyjWC_H0=",
       "type": "image/png",
       "sizes": "512x512"
     }
