--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express-session": "^1.17.2",
+    "html-react-parser": "^1.4.5",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-ajax": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.3.0",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "^3.1.2",
     "react-tilt": "^0.1.4",
     "redis": "^3.1.2",
